# whxchat

./: .gitignore.swp  README.md  global.h  httpmanager.cpp  httpmanager.h  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registerdialog.cpp  registerdialog.h  registerdialog.ui  resources.qrc  singleton.h  whxchat.pro
GateServer/: CMakeLists.txt
GateServer/include/: const.h  cserver.h  http_connection.h  logic_system.h  singleton.h
GateServer/src/: cserver.cpp  gate_server.cpp  http_connection.cpp  logic_system.cpp
style/: stylesheet.qss
